fix menu item spacing in tablet and mobile view

--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@
 
 :root {
   --panel-size: calc(550px / 100vw);
-  --menu-item-height: calc(140px / 100vh);
+  --menu-item-height: calc(var(--universal-spacing) + 5em);
+  --menu-item-grid: 0.5fr 3fr 0.5fr;
   --animation-transition: transform 300ms cubic-bezier(0.86, 0, 0.07, 1);
   --color-light-grey: #f7f7f7;
   --color-light-purple: #edebf3;
@@ -29,12 +30,13 @@
 
 @media (min-width: 48em) {
   :root {
+    --menu-item-height: calc(var(--universal-spacing) + 6em);
+    --menu-item-grid: 1fr 3fr 0.5fr;
     --menu-close-size: 30px;
     --panel-size: 550px;
     --container-width: 1110px;
     --featured-item-direction: row;
     --featured-item-direction-reverse: row-reverse;
-    --nav-flex-content: flex-start;
     --font-size-h1: 56px;
     --line-height-h1: 64px;
     --menu-burger-size: 40px;
@@ -43,7 +45,7 @@
 
 h1 {
   font-size: var(--font-size-h1);
-  line-height: 38px;
+  line-height: var(--line-height-h1);
   font-weight: normal;
   letter-spacing: -0.5px;
   padding: var(--universal-spacing);
@@ -105,6 +107,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   background-color: white;
+  padding: var(--universal-spacing);
 }
 
 main {
@@ -183,7 +186,7 @@ main {
 }
 
 .menu-panel.hidden {
-  opacity: 0;
+  display: none;
   -webkit-transform: var(--menu-transform);
       -ms-transform: var(--menu-transform);
           transform: var(--menu-transform);
@@ -208,6 +211,7 @@ main {
   left: 0;
   width: 100%;
   padding: var(--universal-spacing);
+  align-items: center;
 }
 
 .menu-close-title {
@@ -281,8 +285,7 @@ main {
 .menu-item {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1em 3fr 1em 0.5fr;
-  grid-template-columns: 1fr 3fr 0.5fr;
+  grid-template-columns: var(--menu-item-grid);
   grid-gap: 1em;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -326,11 +329,10 @@ main {
 .logo {
   background-image: url("./assets/logo.svg");
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: center;
   background-size: contain;
-  margin: var(--universal-spacing);
-  min-width: 150px;
-  min-height: 60px;
+  min-width: calc(var(--universal-spacing) * 6);
+  min-height: calc(var(--universal-spacing) * 3);
 }
 
 header {
